# wacz-signing

./: .gitignore  README.md  pyproject.toml  requirements.txt  set-up-dot-env.sh
.github/workflows/: tests.yml
examples/web-api/: README.md  app.py
examples/web-api/gunicorn/: pyproject.toml  requirements.txt
examples/web-api/no-gunicorn/: pyproject.toml
signing/: material.py  signer.py
test_files/: ill-digest.wacz
tests/: test_signing.py
tests/test_files/: not-signed.wacz
wacz_signing/: material.py  signer.py
