[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_api"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
wacz-signing = "^0.2.7"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
